# reading-ai-companion

./: .env.template  .gitignore  .pylintrc  README.md  config-example.json  pyproject.toml
reading_ai_companion/: __init__.py  companion.py  finetuner.py  llm_schema.py
reading_ai_companion/knowledge_collector/: base.py  core.py
reading_ai_companion/rag/: __init__.py  base.py  lance.py
